[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "neuromancer"
version = "1.5.6"
authors = [
    { name = "Jan Drgona", email = "jdrgona1@jh.edu" },
    { name = "Aaron Tuor", email = "aaron.tuor@pnnl.gov" },
    { name = "James Koch", email = "james.koch@pnnl.gov" },
    { name = "Madelyn Shapiro", email = "madelyn.shapiro@pnnl.gov"},
    { name = "Rahul Birmiwal", email = "rahul.birmiwal@pnnl.gov"},
    { name = "Draguna Vrabie", email = "draguna.vrabie@pnnl.gov" },
    { name = "Bruno Jacob", email = "bruno.jacob@pnnl.gov" },
    { name = "Reilly Raab", email = "reilly.raab@pnnl.gov" }
]
description = "Neural Modules with Adaptive Nonlinear Constraints and Efficient Regularization"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "BSD-2-Clause" }
keywords = ["Deep Learning","Pytorch","Scientific Machine Learning","Dynamical Systems","Data-driven control"]
classifiers = [
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Physics",
  "License :: OSI Approved :: BSD License"
]
dependencies = [
    "dill",
    "graphviz",
    "matplotlib",
    "networkx>=3,<4",
    "numpy>=1.23,<3.0",
    "pandas",
    "plum-dispatch==1.7.3",
    "scikit-learn",
    "scipy",
    "six",
    "pydot==1.4.2",
    "pyts",
    "torch",
    "torchdiffeq",
    "toml", 
    "lightning", 
    "cvxpy", 
    "cvxpylayers", 
    "casadi",
    "torchsde"
]

[project.urls]
homepage = "https://github.com/pnnl/neuromancer/"
documentation = "https://github.com/pnnl/neuromancer/"
repository = "https://github.com/pnnl/neuromancer/"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
tests = ["pytest", "hypothesis"]
examples = ["imageio"]
docs = ["sphinx", "sphinx-rtd-theme"]
tracking = ["mlflow>=2.12,<3", "wandb"]
